--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+nav {
+	background-color: aqua;
+	padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
+}
